# ayatana-indicator-printers

./: .build.yml  .bzrignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.am.coverage  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  update-po.sh  update-pot.sh
data/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ayatana-indicator-printers.conf.in  ayatana-indicator-printers.desktop.in  ayatana-indicator-printers.service.in  indicator-printers.conf.in  indicator-printers.desktop.in  indicator-printers.service  indicator-printers.service.in  org.ayatana.indicator.printers
data/upstart/: Makefile.am  ayatana-indicator-printers.desktop.in  indicator-printers.desktop.in
debian/: ayatana-indicator-printers.links  changelog  control  copyright  indicator-printers.install  indicator-printers.maintscript  rules  watch
po/: CMakeLists.txt  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-printers.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+97 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  cups-notifier.c  cups-notifier.h  dbus-names.h  indicator-menu-item.c  indicator-menu-item.h  indicator-printer-state-notifier.c  indicator-printer-state-notifier.h  indicator-printers-menu.c  indicator-printers-menu.h  indicator-printers-service.c  indicator-printers-service.h  indicator-printers.c  indicator-printers.h  main.c  show-printer-settings.c  show-printer-settings.h  spawn-printer-settings.c  spawn-printer-settings.h
test/: CMakeLists.txt  Makefile.am  Makefile.in  mock-cups-notifier.c
