SUBDIRS = src data test po

include $(top_srcdir)/Makefile.am.coverage

DISTCLEANFILES = \
    INSTALL \
    Makefile.in \
    aclocal.m4 \
    compile \
    configure \
    config.h.in \
    config.h \
    config.sub \
    config.guess \
    depcomp \
    install-sh \
    ltmain.sh \
    missing \
    m4/intltool.m4 \
    m4/libtool.m4 \
    m4/ltoptions.m4 \
    m4/ltsugar.m4 \
    m4/ltversion.m4 \
    m4/lt~obsolete.m4 \
    po/Makefile.in.in
